Attempted scroll overflow fix.

--- a/css/sass/assets.scss
+++ b/css/sass/assets.scss
@@ -9,11 +9,17 @@
     box-sizing: border-box;
   }
 
+html,body{
+    -webkit-overflow-scrolling : touch !important;
+    overflow: auto !important;
+    height: 100% !important;
+}
+
 html{
   width: 100%;
   height: 100%;
-  overflow-x: hidden !important;
-  overflow-y: scroll;
+  //overflow-x: hidden !important;
+  //overflow-y: scroll;
 }
 
 body{
@@ -29,7 +35,7 @@ body{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: $body_background_image;
-  overflow-x: hidden !important;
+  //overflow-x: hidden !important;
 
   @media (min-width: 1000px) {
     font-size: 1.25em;
